--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
 
 </head>
 <body>
-    
+    <div id="app">
+     <main>
+        <div class="main-container"></div>
+        <div class="back">
+        <img src="Assets/icons/arrow-left-02.svg" alt="">
+         <span>Voltar</span>
+
+        <h1>Formulário de Matrícula</h1>
+        <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>    
+
+        </div>
+     </main>
+
+<aside>
+    <div class="aside-container"></div>
+    <header>
+        <img src="Assets/icons/logo.svg" alt="">
+        <h2>Porque cada momento de 
+            <span> aprendizado</span> 
+            conta</h2>
+        <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+    </header>
+<img src="Assets/icons/Illustration.svg" alt="ilustração de crianças com professora">
+
+</aside>
+ </div>
+
 </body>
 </html>
