--- a/index.html
+++ b/index.html
@@ -128,13 +128,33 @@
                 </div>
 
 
-
-
-
                 </fieldset>
 
+                <fieldset class="gardian" >
+                    <legend>Informações do responsável</legend>
+
+                <div class="input-wrapper"><label for="gardian">Nome do responsável</label><input 
+                     type="text" id="gardian">
+                     <small>Principal responsável legal e contato de emergência</small>
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="phone">Telefone</label>
+                    <input type="tel" id="phone" name="phone" placeholder="(+55)9999-9999">
+                </div>
+
+                <div class="input-wrapper"></div>
+                <label for="email">email</label>
+                <input type="email" name="mail" id="mail" required>
+                <div class="error">
+                    <img src="Assets/icons/alert-circle.svg" alt="ícone de alerta">
+                    <span>Insira um e-mail válido</span>
+                </div>
+
+                 </fieldset>
 
 
+                 
              </form>
             </div>
         </main>
