--- a/index.html
+++ b/index.html
@@ -180,9 +180,80 @@
 
                      </div>
 
+                     <div class="input-wrapper">
+                        <label>Em qual esporte você gostaria de 
+                            inscrever seu filho?</label>
+
+                     <div class="radio-wrapper">
+                        <div class="radio-inner">
+                            <div class="radio-image"></div>
+                                <input type="radio" name="sport" 
+                                id="football">
+                                <img src="Assets/icons/football.svg" alt="futebol">
+                                <label for="football">Futebol</label>
+                        </div>
+
+                        <div class="radio-inner">
+                            <div class="radio-image"></div>
+                                <input type="radio" name="sport" 
+                                id="football">
+                                <img src="Assets/icons/basketball-02.svg" alt="Basquete">
+                                <label for="basketball">Basquete</label>
+                        </div>
+
+                        <div class="radio-inner">
+                            <div class="radio-image"></div>
+                                <input type="radio" name="sport" 
+                                id="swimming">
+                                <img src="Assets/icons/swimming.svg" alt="natação">
+                                <label for="swimming">Natação</label>
+                        </div>
+
+                        <div class="radio-inner">
+                            <div class="radio-image"></div>
+                                <input type="radio" name="sport" 
+                                id="yoga">
+                                <img src="Assets/icons/yoga-02.svg" alt="Yoga">
+                                <label for="yoga">Yoga</label>
+                        </div>
+
+                        <div class="radio-inner">
+                            <div class="radio-image"></div>
+                                <input type="radio" name="sport" 
+                                id="volleyball">
+                                <img src="Assets/icons/volleyball.svg" alt="volei">
+                                <label for="volleyball">Volei</label>
+                        </div>
+
+
+                        <div class="radio-inner">
+                            <div class="radio-image"></div>
+                                <input type="radio" name="sport" 
+                                id="boxing">
+                                <img src="Assets/icons/boxing-glove-01.svg" alt="Boxe">
+                                <label for="boxing">Boxe</label>
+                        </div>
+
+
+                     </div>       
+
+                     </div>
+
                  </fielset>
 
+                 <div class="terms-wrapper input-wrapper checkbox-wrapper">
+                    <div class="checkbox-image"></div>
+                    <input type="checkbox" name="terms" id="terms"> 
+                    <label for="terms">
+                        Declaro que li e concordo com os <strong>
+                        Termos e Condições</strong>
+                        e com a <strong>Política 
+                        de Privacidade</strong> da escola Estrela do 
+                        Amanhã. 
 
+                    </label>
+
+                 </div>
                  
              </form>
             </div>
