--- a/index.html
+++ b/index.html
@@ -255,6 +255,11 @@
 
                  </div>
                  
+                <div class="actions-wrapper">
+                    <button class="btn-secondary" type="button">Salvar respostas</button>
+                    <button class="btn-primary" type="submit">Fazer matrícula</button>
+                </div>
+
              </form>
             </div>
         </main>
